--- a/html/introduction.html
+++ b/html/introduction.html
@@ -336,8 +336,8 @@ and not the work being done. In that case, the sample code will look
 like:</p>
 <div class="codehilite"><pre><span class="kt">bool</span> <span class="nf">update</span><span class="p">()</span>
 <span class="p">{</span>
-    <span class="c1">// Do work&amp;hellip;</span>
-    <span class="k">return</span> <span class="n">isDone</span><span class="p">();</span>
+  <span class="c1">// Do work...</span>
+  <span class="k">return</span> <span class="n">isDone</span><span class="p">();</span>
 <span class="p">}</span>
 </pre></div>
 
