--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -530,7 +530,7 @@ the first, in a big circle:</p>
 <p>The resulting stage is set up a bit like the following image shows.
 The arrows show who is facing who, and the numbers show their index
 in the stage&#x2019;s array:</p>
-<p><img src="images/double-buffer-stage-1.gif" /></p>
+<p><img src="images/double-buffer-slaps-1.png" /></p>
 <p>Now, let&#x2019;s slap Harry to get things going and see what happens when
 we start processing:</p>
 <div class="codehilite"><pre><span class="n">harry</span><span class="o">-&gt;</span><span class="n">slap</span><span class="p">();</span>
@@ -556,7 +556,7 @@ occurs:</p>
 through all of the comedians. Now let&#x2019;s mix things up a bit. Lets say
 we reorder the comedians within the stages array, but leaving them
 still facing each other the same way.</p>
-<p><img src="images/double-buffer-stage-2.gif" /></p>
+<p><img src="images/double-buffer-slaps-2.png" /></p>
 <p>We&#x2019;ll leave the rest of the stage setup alone, but replace the chunk
 of code where we add the actors to the stage with this:</p>
 <div class="codehilite"><pre><span class="n">stage</span><span class="p">.</span><span class="n">add</span><span class="p">(</span><span class="n">harry</span><span class="p">,</span> <span class="mi">2</span><span class="p">);</span>
